# rust-genai

./: .gitignore  .parallel-context.md  BACKLOG.md  BENCHMARKING.md  CHANGELOG.md  CLAUDE.MD  CLAUDE.md  Cargo.toml  DEPENDENCY_AUDIT.md  LICENSE  Makefile  README.md  REFACTORING_PLAN.md  SECURITY.md  TEST_COVERAGE.md  TODO.md  TROUBLESHOOTING.md
.cargo/: config.toml
.claude/: settings.json
.claude/commands/: pr-feedback.md
.claude/hooks/: session_init.sh  stop-hook.sh
.github/: release-drafter.yml
.github/scripts/: categorize_failures.sh  compare_trends.sh  generate_flakiness_report.sh
.github/workflows/: audit.yml  ci-flakiness-report.yml  claude-code-review.yml  release-drafter.yml  release.yml  rust.yml
benches/: function_registry.rs  multimodal.rs  response_extraction.rs  serialization.rs  sse_streaming.rs  tool_service.rs
docs/: AGENTS_AND_BACKGROUND.md  BUILDER_API.md  BUILT_IN_TOOLS.md  CONFIGURATION.md  CONVERSATION_PATTERNS.md  ENUM_WIRE_FORMATS.md  ERROR_HANDLING.md  EXAMPLES_INDEX.md  FUNCTION_CALLING.md  INTERACTIONS_API_FEEDBACK.md  LOGGING_STRATEGY.md  MULTIMODAL.md  MULTI_TURN_FUNCTION_CALLING.md  OUTPUT_MODALITIES.md  PERFORMANCE.md  RELIABILITY_PATTERNS.md  RETRY_PATTERNS.md  STREAMING_API.md  TESTING.md  THINKING_MODE.md  WIRE_FORMAT_IMPROVEMENTS_SUMMARY.md  WIRE_FORMAT_VERIFICATION_IMPROVEMENTS.md
examples/: CLAUDE.md  audio_input.rs  auto_function_calling.rs  cancel_interaction.rs  code_execution.rs  computer_use.rs  deep_research.rs  explicit_turns.rs  file_search.rs  files_api.rs  function_call.rs  function_calling.rs  gemini3_thought_signatures.rs  google_search.rs  image_generation.rs  manual_function_calling.rs  multimodal_image.rs  parallel_and_compositional_functions.rs  pdf_input.rs  response_passthrough.rs  retry_with_backoff.rs  simple_interaction.rs  simple_request.rs  stateful_interaction.rs  stream_request.rs  streaming.rs  streaming_auto_functions.rs  structured_output.rs  system_instructions.rs  text_input.rs  text_to_speech.rs  thinking.rs  thought_echo.rs  tool_service.rs  url_context.rs  video_input.rs
examples/real_world/: README.md
examples/real_world/code_assistant/: README.md  main.rs
examples/real_world/data_analysis/: README.md  main.rs
examples/real_world/multi_turn_agent/: README.md  main.rs
examples/real_world/multi_turn_agent_auto/: README.md  main.rs
examples/real_world/multi_turn_agent_manual/: README.md  main.rs
examples/real_world/multi_turn_agent_manual_stateless/: README.md  main.rs
examples/real_world/rag_system/: README.md  main.rs
examples/real_world/stateless_multi_turn_agent_manual/: main.rs
examples/real_world/testing_assistant/: README.md  main.rs
examples/real_world/web_scraper_agent/: README.md  main.rs
genai-client/: Cargo.toml
genai-client/benches/: content_serialization.rs  sse_parser.rs
genai-client/proptest-regressions/models/interactions/: proptest_tests.txt
genai-client/src/: common.rs  core.rs  error_helpers.rs  errors.rs  files.rs  interactions.rs  lib.rs  loud_wire.rs  sse_parser.rs
genai-client/src/models/: interactions.rs  mod.rs  request.rs  response.rs  shared.rs
genai-client/src/models/interactions/: agent_config.rs  content.rs  content_tests.rs  metadata.rs  mod.rs  proptest_tests.rs  request.rs  request_tests.rs  response.rs  response_tests.rs  streaming.rs  streaming_tests.rs  tests.rs  unknown_content_tests.rs
genai-rs-macros/: Cargo.toml
genai-rs-macros/src/: codegen.rs  lib.rs  parsing.rs  schema.rs
rust-genai-macros/: Cargo.toml
rust-genai-macros/src/: lib.rs
rust_genai_macros/: Cargo.toml
src/: agent_config.rs  builder_traits.rs  client.rs  content.rs  content_api.rs  content_tests.rs  errors.rs  function_calling.rs  interactions_api.rs  lib.rs  metadata.rs  multimodal.rs  proptest_tests.rs  request.rs  request_builder.rs  request_tests.rs  response.rs  response_ext.rs  response_tests.rs  streaming.rs  streaming_tests.rs  tools.rs  types.rs  wire_streaming.rs
src/http/: common.rs  error_helpers.rs  files.rs  interactions.rs  loud_wire.rs  mod.rs  sse_parser.rs
src/internal/: response_processing.rs
src/request_builder/: auto_functions.rs  mod.rs  tests.rs
tests/: advanced_function_calling_tests.rs  agents_and_multiturn_tests.rs  agents_tests.rs  api_canary_tests.rs  api_wire_format_live_tests.rs  auto_function_tests.rs  builder_tests.rs  builder_traits_integration_tests.rs  client_tests.rs  content_api_edge_cases.rs  content_api_tests.rs  debug_mode_tests.rs  error_handling_tests.rs  expanded_e2e_tests.rs  files_api_tests.rs  function_calling_integration_tests.rs  function_calling_tests.rs  function_declaration_builder_tests.rs  integration_tests.rs  interaction_builder_edge_cases.rs  interaction_builder_tests.rs  interactions_api_tests.rs  interactions_tests.rs  macro_execution_tests.rs  macro_tests.rs  multimodal_tests.rs  multiturn_function_tests.rs  multiturn_tests.rs  proptest_roundtrip_tests.rs  request_builder_tests.rs  response_processing_tests.rs  run_integration_tests.sh  streaming_multiturn_tests.rs  streaming_resume_tests.rs  strict_unknown_tests.rs  temp_file_tests.rs  thinking_function_tests.rs  thought_signature_tests.rs  tool_service_tests.rs  tools_and_config_tests.rs  (+7 more)
tests/common/: mod.rs
tests/ui/: fail_chained_system_instruction.rs  fail_chained_system_instruction.stderr  fail_invalid_attr.rs  fail_invalid_attr.stderr  fail_invalid_enum.rs  fail_invalid_enum.stderr  fail_nonexistent_param.rs  fail_nonexistent_param.stderr  fail_store_disabled_auto_functions.rs  fail_store_disabled_auto_functions.stderr
