[workspace]
members = [
    "genai-rs-macros",
]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"] }
tokio = { version = "1.48", features = ["full"] }
async-stream = "0.3"
futures-util = "0.3"
thiserror = "2.0"
tracing = "0.1"
async-trait = "0.1"
inventory = "0.3"
bytes = "1.11"
syn = { version = "2.0", features = ["full", "parsing"] }
quote = "1.0"
proc-macro2 = "1.0"
utoipa = "5.4"
chrono = { version = "0.4", features = ["serde"] }

[package]
name = "genai-rs"
version = "0.7.0"
edition = "2024"
rust-version = "1.88"
license = "MIT"
description = "A Rust client library for Google's Generative AI (Gemini) API with streaming, function calling, and multi-turn conversations"
repository = "https://github.com/evansenter/genai-rs"
documentation = "https://docs.rs/genai-rs"
readme = "README.md"
keywords = ["gemini", "google", "ai", "llm", "genai"]
categories = ["api-bindings", "asynchronous"]

[dependencies]
genai-rs-macros = { version = "0.7.0", path = "./genai-rs-macros" }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
async-stream = { workspace = true }
futures-util = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
inventory = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
base64 = "0.22"
# Dependencies from genai-client
tokio-util = { version = "0.7", features = ["io"] }
colored = "3"
colored_json = "5"
regex = "1"
urlencoding = "2"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
trybuild = "1.0.114"
tempfile = "3.15"
bytes = { workspace = true }
futures-util = { workspace = true }
proptest = "1.9"
chrono = { workspace = true }
doc-comment = "0.3"
rand = "0.9"
backon = "1.6"

[features]
## Strict mode for unknown content types.
##
## When enabled, encountering unknown content types in API responses will
## return deserialization errors instead of gracefully capturing them in
## Unknown variants. Use this if you want to fail-fast when the API returns
## content types your code doesn't handle.
##
## Default: disabled (unknown types are captured gracefully)
strict-unknown = []

# Real-world example applications
[[example]]
name = "rag_system"
path = "examples/real_world/rag_system/main.rs"

[[example]]
name = "multi_turn_agent_auto"
path = "examples/real_world/multi_turn_agent_auto/main.rs"

[[example]]
name = "multi_turn_agent_manual"
path = "examples/real_world/multi_turn_agent_manual/main.rs"

[[example]]
name = "multi_turn_agent_manual_stateless"
path = "examples/real_world/multi_turn_agent_manual_stateless/main.rs"

[[example]]
name = "code_assistant"
path = "examples/real_world/code_assistant/main.rs"

[[example]]
name = "data_analysis"
path = "examples/real_world/data_analysis/main.rs"

[[example]]
name = "web_scraper_agent"
path = "examples/real_world/web_scraper_agent/main.rs"

[[example]]
name = "testing_assistant"
path = "examples/real_world/testing_assistant/main.rs"

# Workspace-level metadata

[profile.dev]
opt-level = 1
debug = 1

[profile.dev.package."*"]
opt-level = 2

[profile.test]
inherits = "dev"
