[package]
name = "genai-client"
version = "0.2.0"
edition = "2024"

[dependencies]
reqwest = { workspace = true, features = ["stream"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-stream = { workspace = true }
bytes = { workspace = true }
futures-util = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
