[package]
name = "genai-client"
version = "0.2.0"
edition = "2024"

[dependencies]
reqwest = { workspace = true, features = ["stream"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-stream = { workspace = true }
bytes = { workspace = true }
futures-util = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }
tokio-util = { version = "0.7", features = ["io"] }
colored = "3"
colored_json = "5"
regex = "1"

[features]
## Strict mode for unknown content types.
##
## When enabled, encountering unknown content types in API responses will
## return deserialization errors instead of gracefully capturing them in
## Unknown variants. Use this if you want to fail-fast when the API returns
## content types your code doesn't handle.
##
## Default: disabled (unknown types are captured gracefully)
strict-unknown = []

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
futures-util = { workspace = true }
proptest = "1.9"
